Bug 44714 Icons not changed from IE to Mozilla when set in Desktop Integration (.url icons) (Internet shortcuts) patch by jonwil@tpgi.com.au r=sgehani sr=bz a=sspitzer